tests/snapshots/examples_fixtures/flow__base_shadowing_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/flow/base_shadowing_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E013]: Module Not Imported

Module `Flow` is not imported.

  examples/flow/base_shadowing_ok.flx:9:9
  |
9 |   print(Flow.len(xs))
  |         ^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Flow`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.
== stdout ==
<not executed>
